Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body { font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; padding: 20px; color: #333; }
         .container { max-width: 950px; margin: auto; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
         h2, h3 { color: #2d6a4f; border-bottom: 2px solid #d8e2dc; padding-bottom: 5px; }
-        .chart-box { height: 320px; margin-bottom: 30px; padding: 10px; background: #fff; border: 1px solid #eee; border-radius: 8px; }
+        .chart-box { height: 320px; margin-bottom: 30px; padding: 10px; background: #fff; border: 1px solid #333; border-radius: 8px; }
         table { width: 100%; border-collapse: collapse; margin-top: 15px; background: #fff; }
         th, td { border: 1px solid #ddd; padding: 12px; text-align: left; font-size: 14px; }
         th { background-color: #2d6a4f; color: white; }
@@ -208,3 +208,4 @@
 </script>
 </body>
 </html>
+
