Add Open Graph meta tags to index.html
Added Open Graph meta tags for improved sharing.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Wedding Planner Dashboard" />
+    <meta property="og:description" content="Wedding Planner" />
+    <meta property="og:image" content="https://bimawest.github.io/Roadmap/couple.jpg" />
+    <meta property="og:url" content="https://bimawest.github.io/Roadmap/" />
+    <meta property="og:image:alt" content="Wedding Planner" />
     <title>Wedding Planner Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -208,4 +213,5 @@
 </script>
 </body>
 </html>
+
 
