--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Wedding Planner Dashboard" />
     <meta property="og:description" content="Wedding Planner" />
-    <meta property="og:image" content="https://bimawest.github.io/Roadmap/couple.jpg" />
-    <meta property="og:url" content="https://bimawest.github.io/Roadmap/" />
+    <meta property="og:image" content="https://bimawest.github.io/weddingplanner/couple.jpeg" />
+    <meta property="og:url" content="https://bimawest.github.io/weddingplanner/" />
     <meta property="og:image:alt" content="Wedding Planner" />
     <title>Wedding Planner Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -213,5 +213,6 @@
 </script>
 </body>
 </html>
+
 
 
