Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <script>
     // GANTI DENGAN URL WEB APP ANDA
-    const webAppUrl = "URL_WEB_APP_ANDA_DISINI";
+    const webAppUrl = "https://script.google.com/macros/s/AKfycbz6hvuD2dcxrjjUTElgCunKxmsRvDTJFISJDdLqpPyeR_M_WNLESc4EkVfOza-7wStR/exec";
     let myChart = null;
 
     const getStatusColor = (val) => {
@@ -198,3 +198,4 @@
 </script>
 </body>
 </html>
+
