--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Wedding Planner Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; padding: 20px; color: #333; }
+        body { font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; padding: 20px; color: #333; }
         .container { max-width: 950px; margin: auto; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
         h2, h3 { color: #2d6a4f; border-bottom: 2px solid #d8e2dc; padding-bottom: 5px; }
-        .chart-box { height: 320px; margin-bottom: 30px; padding: 10px; border: 1px solid #eee; border-radius: 8px; }
+        .chart-box { height: 320px; margin-bottom: 30px; padding: 10px; background: #fff; border: 1px solid #333; border-radius: 8px; }
         table { width: 100%; border-collapse: collapse; margin-top: 15px; background: #fff; margin-bottom: 20px; }
         th, td { border: 1px solid #ddd; padding: 12px; text-align: left; font-size: 14px; }
         th { background-color: #2d6a4f; color: white; }
         tr:nth-child(even) { background-color: #f9f9f9; }
-        input { width: 100%; padding: 6px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-        select { padding: 6px; border-radius: 4px; cursor: pointer; border: none; color: white; font-weight: bold; width: 100%; }
+        input[type="number"] { width: 110px; padding: 6px; border: 1px solid #ccc; border-radius: 4px; }
+        select { padding: 6px; border-radius: 4px; cursor: pointer; }
         .negative { color: #d93025; font-weight: bold; }
         .positive { color: #1e8e3e; font-weight: bold; }
-        .loading-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); z-index: 1000; text-align: center; padding-top: 20%; font-size: 1.2em; }
-        small { color: #666; display: block; font-style: italic; font-size: 11px; }
+        .loading-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.7); z-index: 1000; text-align: center; padding-top: 20%; font-weight: bold; }
+        small { color: #666; display: block; font-style: italic; }
     </style>
 </head>
 <body>
@@ -198,4 +198,3 @@
 </script>
 </body>
 </html>
-
